# mesa-examples

./: .codespellignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  README.rst  codecov.yaml  docker-compose.yml  pyproject.toml  setup.cfg  test_examples.py  test_gis_examples.py  viz.py
.github/workflows/: build_lint.yml  test_examples.yml  test_gis_examples.yml  test_viz.yml
examples/: README.md
examples/Boltzmann_Wealth_Model/: requirements.txt
examples/EpsteinCivilViolence/: Readme.md
examples/ForestFire/: info.md
examples/Virus_on_Network/: requirements.txt
examples/aco_tsp/: README.md  app.py  run_tsp.py  setup.py
examples/ant_colony/: Readme.md  run.py
examples/bank_reserves/: BankReservesModel_Data.csv  Readme.md  app.py  batch_run.py  model.py  requirements.txt  run.py
examples/boid_flockers/: Readme.md
examples/boltzmann_wealth_model_experimental/: Readme.md  app.py  model.py  requirements.txt
examples/boltzmann_wealth_model_network/: README.md  agent.py  app.py  model.py  requirements.txt  run.py
examples/caching_and_replay/: README.md  cachablemodel.py  cacheablemodel.py  model.py  requirements.txt  run.py  server.py
examples/charts/: requirements.txt  run.py
examples/cholera_voronoi/: README.md  agents.py  model.py  requirements.txt  run.ipynb  run.py
examples/city_walking_behaviour/: Readme.md  app.py
examples/color_patches/: app.py  requirements.txt  run.py
examples/conways_game_of_life/: app.py
examples/conways_game_of_life_fast/: Readme.md  app.py  model.py  model_run.py
examples/dijkstra_journey/: README.md  app.py  setup.py
examples/driver_allocation/: README.md  agents.py  requirements.txt  server.py  simulation.py
examples/el_farol/: README.md  el_farol.ipynb  requirements.txt  tests.py
examples/epstein_civil_violence/: app.py  epstein_civil_violence.py  requirements.txt  test_epstein_civil_violence.py
examples/epstein_civil_violence_experimental/: Readme.md  agent.py  app.py  model.py  run.py  test_epstein_civil_violence.py
examples/epstein_civil_violence_experimental_devs/: Readme.md  agent.py  app.py  model.py  requirements.txt
examples/forest_fire/: Forest Fire Model.ipynb  app.py  requirements.txt  run.py
examples/hex_snowflake/: run.py
examples/hotelling_law/: Readme.md  agents.py  app.py  cprofile_test.py  model.py  requirements.txt  run.py  server.py  tests.py  visualization.py
examples/ising/: README.md  app.py  run.py
examples/preferencial_attachment/: README.md  agents.py  app.py  model.py
examples/schelling/: README.md  model.py  server.py
examples/schelling_experimental/: app.py  model.py  requirements.txt
examples/shape_example/: run.py
examples/sugarscape_cg/: Readme.md  requirements.txt  run.py
examples/sugarscape_g1mt/: Readme.md  app.py  requirements.txt  run.py  tests.py
examples/sugarscape_scc/: README.md  run.py
examples/termites/: README.md  agents.py  app.py  model.py
examples/virus_antibody/: README.md  agents.py  app.py  model.py  requirements.txt
examples/virus_on_network/: README.md  app.py
examples/warehouse/: Readme.md  agents.py  app.py  model.py  requirements.txt
examples/wolf_sheep/: Readme.md  requirements.txt  wolf_sheep.py
experimental/: __init__.py  jupyter_viz.py
gis/: README.md
rl/: README.md  Tutorials.ipynb  Tutorials.md  example.py  requirements.txt  train.py
(+213 files in other folders)
