[options]
package_dir =
    mesa_models.boltzmann_wealth_model = examples/boltzmann_wealth_model/boltzmann_wealth_model
    mesa_models.schelling = examples/schelling
    mesa_models.epstein_civil_violence = examples/epstein_civil_violence/epstein_civil_violence
    mesa_models.wolf_sheep = examples/wolf_sheep/wolf_sheep
